SRRM-149 Add overflow-x hidden for iPhone issue

--- a/web/themes/custom/surf_main/libraries/components/site-header/site-header.component.scss
+++ b/web/themes/custom/surf_main/libraries/components/site-header/site-header.component.scss
@@ -163,6 +163,8 @@ main::before {
 /**** START - Main Navigation ****/
 .c-site-header__menu-main {
   // Allow overflow for mobile menu
+  // Odd issue on iPhone 13 mini - hide x overflow
+  overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
 
